# mate-common

./: .build.yml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  configure.in  meson.build
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
doc/: Makefile.am  autogen.sh.example  mate-autogen.1  mate-autogen.txt  mate-doc-common.1  mate-doc-common.txt  meson.build  update-manpages.sh  usage.txt
doc-build/: README  meson.build
macros/: Makefile.am  mate-autogen  mate-code-coverage.m4  mate-common.m4  mate-compiler-flags.m4  meson.build
macros2/: mate-autogen  mate-autogen.sh
